# legal-rag-assistant

./: .env.example  .gitignore  Dockerfile  README.md  main.py  pyproject.toml
docs/: cloud_run_scheduler.md  weaviate_gce.md
src/backend/: deps.py  drive_watch_refresh.py  drive_watcher.py  main.py  rag.py  rerank.py
src/common/: config.py  logger.py  weaviate_client.py
src/ingestion/: drive_fetcher.py  embedder.py  ingest.py  state_manager.py  text_extractor.py  to_json.py
tests/: test_rag_api.py
